# TMgen

./: .flake8.cython  .gitignore  .travis.yml  LICENSE  Makefile  README.md  example-workflow.ipynb  requirements.txt  setup.cfg  setup.py
docs/: Makefile  api.rst  conf.py  dev.rst  index.rst  quickstart.rst
example/: mgm.py
examples/: mgm.py
src/scripts/: ditg-injector.py  iperf3-injector.py
src/tmgen/: __init__.pxd  __init__.py  exceptions.py  hmc.pxd  hmc.pyx  models.pxd  models.pyx  plot.py  tm.pxd  tm.pyx
src/tmgen/inject/: __init__.py  ditg_injector.py
tests/: plot_interactive.py  test_models.py  test_tmclass.py
