[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts=--verbose --doctest-glob=*.rst --doctest-glob=*.md --ignore=docs/conf.py --ignore=plot.py --ignore=plot*.py
doctest_optionflags = ALLOW_UNICODE ALLOW_BYTES NORMALIZE_WHITESPACE

[flake8]
filename=*.py,
ignore=E501
exclude=docs,__pychache__,.eggs,*.egg,build

