[aliases]
test=pytest

[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests docs src
addopts = --verbose --doctest-glob='docs/*.rst' --doctest-modules
doctest_encoding = utf8
doctest_optionflags = NORMALIZE_WHITESPACE ALLOW_UNICODE ALLOW_BYTES

[flake8]
filename=*.py,
ignore=E501
exclude=docs,__pychache__,.eggs,*.egg,build

[build_sphinx]
source-dir = docs
all-files = True
build-dir = docs/build
warning-is-error = 1